build: adicionado caminho do interpretador /venv/bin/python ao devcontainer.json para selecionar na contrucao do ambiente de dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,9 @@
     },
     "customizations": {
         "vscode": {
+            "settings": {
+                "python.defaultInterpreterPath": "/opt/venv/bin/python"
+            },
             "extensions": [
                 "ms-vscode-remote.remote-containers",
                 "ms-python.python",
